istio/account/multi-ingressgateways/gateways/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ucloud-gateway
  #namespace: istio-system

spec:
  selector:
    app: second-istio-ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
